--- a/templates/columns.html
+++ b/templates/columns.html
@@ -20,6 +20,7 @@
                 <button class="ui green button" type="submit">Search</button>
             </div>
         </form>
+        <h3 id="login"><a href="/admin-login/">登录</a>&nbsp;/&nbsp;<a href="/oauth/login/">SSO 登录</a></h3>
         {% render_table table %}
         &nbsp;
     {% endblock %}
@@ -28,6 +29,11 @@
 <style>
     #title {
         margin-top: 10px;
+    }
+
+    #login {
+        margin-top: 10px;
+        float: right;
     }
 
     #id_word {
