--- a/templates/columns.html
+++ b/templates/columns.html
@@ -21,7 +21,7 @@
             </div>
         </form>
         {% if enable_oauth %}
-            <h3 id="login"><a href="/admin-login/">Login</a>&nbsp;/&nbsp;<a href="/oauth/login/">SSO Login</a></h3>
+            <h3 id="login"><a href="/oauth/login/">Login</a></h3>
         {% else %}
             <h3 id="login"><a href="/admin/login/">Login</a></h3>
         {% endif %}
