--- a/templates/columns.html
+++ b/templates/columns.html
@@ -38,7 +38,7 @@
         {% endif %}
     {% endblock %}
     <di class="footer">
-        <span><a href="https://github.com/huifenqi/dbhub">DBHUB</a> is built with <3 using Django & maintained by <a href="https://github.com/huifenqi">huifenqi</a>.</span>
+        <span><a href="https://github.com/huifenqi/dbhub">DBHUB</a> is built with <3 using Django & maintained by <a href="https://github.com/iamsk">iamsk</a>.</span>
     </di>
 </div>
 </body>
